fix(ci): use libc++ for clang on Linux to ensure ABI compatibility
On Linux, clang uses libstdc++ by default. When building GoogleTest
from source, it gets compiled with whatever stdlib clang is using.
The test code also uses clang's default stdlib. However, if there's
any mismatch (e.g., headers from libc++ but linking against libstdc++),
we get undefined reference errors.

This fix explicitly sets -stdlib=libc++ for clang on Linux to ensure
consistent stdlib usage across the entire build, including GoogleTest.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,6 +173,13 @@ jobs:
       if: runner.os != 'Windows'
       working-directory: pacs_bridge
       run: |
+        # For clang on Linux, use libc++ for better C++23 support
+        # This ensures ABI compatibility with GoogleTest built from source
+        EXTRA_FLAGS=""
+        if [ "${{ matrix.compiler }}" = "clang" ] && [ "${{ runner.os }}" = "Linux" ]; then
+          EXTRA_FLAGS="-DCMAKE_CXX_FLAGS=-stdlib=libc++ -DCMAKE_EXE_LINKER_FLAGS=-stdlib=libc++ -lc++abi"
+        fi
+
         cmake -B build \
           -G Ninja \
           -DCMAKE_BUILD_TYPE=$BUILD_TYPE \
@@ -182,7 +189,8 @@ jobs:
           -DBRIDGE_BUILD_HL7=ON \
           -DBRIDGE_BUILD_FHIR=OFF \
           -DCMAKE_C_COMPILER=${{ matrix.compiler == 'gcc' && 'gcc' || 'clang' }} \
-          -DCMAKE_CXX_COMPILER=${{ matrix.compiler == 'gcc' && 'g++' || 'clang++' }}
+          -DCMAKE_CXX_COMPILER=${{ matrix.compiler == 'gcc' && 'g++' || 'clang++' }} \
+          $EXTRA_FLAGS
 
     # Tests enabled (Issue #6 - Test Framework Setup completed)
     - name: Configure CMake (Windows)
