feat(router): implement outbound message router for HL7 delivery
Implement outbound message router that routes generated HL7 messages
to configured destinations with failover support.

Features:
- Destination selection by message type
- Priority-based routing with failover
- Health checking for destinations
- Async delivery with queue support
- Connection pool integration
- Delivery tracking and statistics
- Fluent builder API for destination configuration

Closes #28

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -213,6 +213,9 @@ if(BRIDGE_BUILD_HL7)
     # Message Router Tests - custom framework
     add_bridge_test(router_test "unit;router;phase1")
 
+    # Outbound Router Tests (Issue #28) - GTest framework
+    add_gtest_test(outbound_router_test "unit;router;phase2")
+
     # Patient Cache Tests - custom framework
     add_bridge_test(cache_test "unit;cache;phase1")
 endif()
