feat(router): implement outbound message queue with persistent storage (#75)
* feat(router): add queue_manager header for persistent message queue

Implement header file for outbound message queue with:
- queue_config struct with SQLite settings, retry policy, TTL
- queued_message struct for message storage
- queue_error enum (-910 to -919 error code range)
- message_state enum for tracking message lifecycle
- queue_manager class API for enqueue/dequeue/ack/nack
- dead_letter_entry struct for failed message handling
- queue_statistics struct for monitoring
- queue_config_builder fluent API

Traces to: FR-4.3.1, FR-4.3.2, FR-4.3.3, FR-4.3.4
Issue: #27

* feat(router): implement queue_manager with SQLite persistence

Implement persistent message queue with:
- SQLite database for durable storage
- WAL mode for concurrent access
- Enqueue/dequeue operations with priority scheduling
- Ack/nack message handling
- Exponential backoff retry strategy
- Dead letter queue for failed messages
- Background cleanup thread for expired messages
- Crash recovery for in-progress messages
- Worker thread pool for async delivery
- Statistics collection for monitoring

Uses pimpl pattern for implementation hiding.

Issue: #27

* test(router): add comprehensive unit tests for queue_manager

Add unit tests covering:
- Error code values and strings
- Message state transitions
- Queue configuration validation
- Queue config builder fluent API
- Queue manager lifecycle (start/stop)
- Basic queue operations (enqueue/dequeue/ack/nack)
- Priority-based message ordering
- Dead letter queue handling
- Statistics collection
- Queue depth and inspection
- Persistence across restarts
- Crash recovery for processing messages
- Maintenance operations (compact, cleanup)
- Queue capacity limits

Uses Google Test framework with pacs_bridge_test fixtures.

Issue: #27

* build: add queue_manager to build configuration

Add queue_manager source and header to main CMakeLists.txt
Add queue_manager_test to tes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,6 +156,16 @@ list(APPEND PACS_BRIDGE_HEADERS
     include/pacs/bridge/router/outbound_router.h
 )
 
+# Queue Manager (requires SQLite)
+if(PACS_BRIDGE_HAS_SQLITE)
+    list(APPEND PACS_BRIDGE_SOURCES
+        src/router/queue_manager.cpp
+    )
+    list(APPEND PACS_BRIDGE_HEADERS
+        include/pacs/bridge/router/queue_manager.h
+    )
+endif()
+
 # Cache
 list(APPEND PACS_BRIDGE_SOURCES
     src/cache/patient_cache.cpp
