--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -216,6 +216,13 @@ if(BRIDGE_BUILD_HL7)
     # Outbound Router Tests (Issue #28) - GTest framework
     add_gtest_test(outbound_router_test "unit;router;phase2")
 
+    # Queue Manager Tests (Issue #27) - GTest framework (requires SQLite)
+    if(PACS_BRIDGE_HAS_SQLITE)
+        add_gtest_test(queue_manager_test "unit;router;queue;phase2")
+    else()
+        message(STATUS "Skipping queue_manager_test: SQLite not available")
+    endif()
+
     # Patient Cache Tests - custom framework
     add_bridge_test(cache_test "unit;cache;phase1")
 endif()
@@ -334,8 +341,12 @@ endmacro()
 # MPPS Integration Tests (N-CREATE/N-SET flows)
 add_integration_test(mpps_integration_test "integration;mpps;phase2")
 
-# Queue Persistence Tests (message recovery)
-add_integration_test(queue_persistence_test "integration;queue;phase2")
+# Queue Persistence Tests (message recovery) - requires SQLite
+if(PACS_BRIDGE_HAS_SQLITE)
+    add_integration_test(queue_persistence_test "integration;queue;phase2")
+else()
+    message(STATUS "Skipping queue_persistence_test: SQLite not available")
+endif()
 
 # Failover Routing Tests (RIS failover)
 add_integration_test(failover_test "integration;failover;phase2")
@@ -358,6 +369,10 @@ if(BRIDGE_BUILD_HL7)
     message(STATUS "  - orm_handler_test")
     message(STATUS "  - mapping_test")
     message(STATUS "  - router_test")
+    message(STATUS "  - outbound_router_test")
+    if(PACS_BRIDGE_HAS_SQLITE)
+        message(STATUS "  - queue_manager_test")
+    endif()
     message(STATUS "  - cache_test")
 endif()
 message(STATUS "  - mllp_test")
@@ -375,7 +390,9 @@ message(STATUS "  - ecosystem_integration_test")
 message(STATUS "")
 message(STATUS "Phase 2 Integration Tests:")
 message(STATUS "  - mpps_integration_test")
-message(STATUS "  - queue_persistence_test")
+if(PACS_BRIDGE_HAS_SQLITE)
+    message(STATUS "  - queue_persistence_test")
+endif()
 message(STATUS "  - failover_test")
 message(STATUS "  - stress_test")
 message(STATUS "==========================")
