build(cmake): add oru_generator to build system
- Add oru_generator.cpp and oru_generator.h to PACS_BRIDGE_SOURCES/HEADERS
- Add oru_generator_test to test suite with GTest framework
- Update test summary to include oru_generator_test

Refs: #25

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ if(BRIDGE_BUILD_HL7)
         src/protocol/hl7/hl7_validator.cpp
         src/protocol/hl7/adt_handler.cpp
         src/protocol/hl7/orm_handler.cpp
+        src/protocol/hl7/oru_generator.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
         include/pacs/bridge/protocol/hl7/hl7_types.h
@@ -124,6 +125,7 @@ if(BRIDGE_BUILD_HL7)
         include/pacs/bridge/protocol/hl7/hl7_validator.h
         include/pacs/bridge/protocol/hl7/adt_handler.h
         include/pacs/bridge/protocol/hl7/orm_handler.h
+        include/pacs/bridge/protocol/hl7/oru_generator.h
     )
 endif()
 
