feat(hl7): add SIU message handler for appointment scheduling
Implement SIU (Scheduling Information Unsolicited) message handler to
support appointment-based scheduling updates for Modality Worklist
management.

Supported trigger events:
- S12: New Appointment - Create MWL entry with appointment info
- S13: Rescheduled - Update MWL timing
- S14: Modification - Update MWL details
- S15: Cancellation - Cancel MWL entry

Features:
- Extract appointment information from SCH, PID, RGS, AIS segments
- Convert appointments to MWL items with proper DICOM structure
- Generate appropriate ACK responses for each trigger event
- Configurable validation and auto-generation of Study Instance UIDs
- Callback support for audit logging and event handling
- Handler statistics tracking

Refs: #26

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,7 @@ if(BRIDGE_BUILD_HL7)
         src/protocol/hl7/adt_handler.cpp
         src/protocol/hl7/orm_handler.cpp
         src/protocol/hl7/oru_generator.cpp
+        src/protocol/hl7/siu_handler.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
         include/pacs/bridge/protocol/hl7/hl7_types.h
@@ -126,6 +127,7 @@ if(BRIDGE_BUILD_HL7)
         include/pacs/bridge/protocol/hl7/adt_handler.h
         include/pacs/bridge/protocol/hl7/orm_handler.h
         include/pacs/bridge/protocol/hl7/oru_generator.h
+        include/pacs/bridge/protocol/hl7/siu_handler.h
     )
 endif()
 
