test(config): add unit tests for config hot-reload
Add comprehensive unit tests for config_manager and admin_server:

Config Manager Tests:
- Creation from file path
- Get copy of configuration
- Reload success scenarios
- Reload validation failure handling
- Callback notification on reload
- Callback with change diff details
- Callback removal
- File change detection
- Direct configuration apply
- Statistics tracking
- Reloadable field detection
- Configuration comparison
- Restart requirement detection

Admin Server Tests:
- Server creation and configuration
- POST /admin/reload endpoint
- Method not allowed handling
- GET /admin/status endpoint
- Configuration view disabled/enabled
- Not found handling
- Request statistics

Part of Issue #39 - Configuration Hot-Reload

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -245,6 +245,7 @@ add_bridge_test(mllp_test "unit;mllp;transport")
 # =============================================================================
 
 add_bridge_test(config_test "unit;config")
+add_bridge_test(config_manager_test "unit;config;hot-reload")
 
 # =============================================================================
 # Security Tests
@@ -385,6 +386,7 @@ if(BRIDGE_BUILD_HL7)
 endif()
 message(STATUS "  - mllp_test")
 message(STATUS "  - config_test")
+message(STATUS "  - config_manager_test")
 message(STATUS "  - security_test")
 if(PACS_BRIDGE_HAS_OPENSSL)
     message(STATUS "  - tls_test")
