feat(fhir): implement Patient resource handler (Issue #32)
Add FHIR R4 Patient resource implementation with support for:
- Patient resource class with identifiers, names, demographics
- Patient resource handler for read and search operations
- DICOM to FHIR patient data mapping utilities
- Search by _id, identifier, name (partial), and birthdate
- Pagination support for search results
- JSON serialization per FHIR R4 specification

The handler integrates with the existing patient cache to provide
FHIR-compliant patient data access through the REST API.

--- a/src/fhir/CMakeLists.txt
+++ b/src/fhir/CMakeLists.txt
@@ -10,6 +10,7 @@ set(FHIR_SOURCES
     operation_outcome.cpp
     resource_handler.cpp
     fhir_server.cpp
+    patient_resource.cpp
 )
 
 set(FHIR_HEADERS
@@ -18,6 +19,7 @@ set(FHIR_HEADERS
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/operation_outcome.h
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/resource_handler.h
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/fhir_server.h
+    ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/patient_resource.h
 )
 
 # Export sources to parent scope for main library
