feat(mapping): implement FHIR-DICOM mapper (Issue #35)
Add bidirectional mapping between FHIR R4 resources and DICOM data
structures for MWL and study queries.

Features:
- ServiceRequest to DICOM MWL Scheduled Procedure Step mapping
- DICOM Study to FHIR ImagingStudy mapping
- FHIR Patient <-> DICOM Patient bidirectional mapping
- LOINC to DICOM procedure code translation
- SNOMED to DICOM body site code translation
- Automatic DICOM UID generation
- DateTime format conversion (FHIR <-> DICOM)
- Priority mapping (routine/urgent/stat <-> MEDIUM/HIGH/STAT)
- Input validation for ServiceRequest and MWL items
- JSON serialization helpers for ImagingStudy and ServiceRequest

Tests:
- 50 unit tests covering all mapping functions
- DateTime conversion tests
- Priority conversion tests
- Patient reference parsing tests
- UID generation tests
- Code system translation tests
- Validation tests
- JSON serialization tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -371,6 +371,9 @@ if(BRIDGE_BUILD_FHIR)
 
     # Patient Resource Tests (Phase 3 - Issue #32)
     add_bridge_test(patient_resource_test "unit;fhir;patient;phase3")
+
+    # FHIR-DICOM Mapper Tests (Phase 3 - Issue #35)
+    add_gtest_test(fhir_dicom_mapper_test "unit;fhir;mapping;phase3")
 endif()
 
 # =============================================================================
@@ -421,6 +424,8 @@ if(BRIDGE_BUILD_FHIR)
     message(STATUS "")
     message(STATUS "Phase 3 FHIR Tests:")
     message(STATUS "  - fhir_server_test")
+    message(STATUS "  - patient_resource_test")
+    message(STATUS "  - fhir_dicom_mapper_test")
 endif()
 message(STATUS "==========================")
 message(STATUS "")
