feat(fhir): implement ServiceRequest resource handler (Issue #33)
Implement FHIR R4 ServiceRequest resource for imaging order management.
Creates MWL (Modality Worklist) entries from incoming requests.

Supported operations:
- create: POST /ServiceRequest (creates MWL entry)
- read: GET /ServiceRequest/{id}
- search: GET /ServiceRequest?patient=xxx
- search: GET /ServiceRequest?status=xxx
- update: PUT /ServiceRequest/{id}

Key features:
- ServiceRequest resource with status, intent, priority, code fields
- Integration with FHIR-DICOM mapper for MWL creation
- In-memory MWL storage with thread-safe operations
- JSON serialization/deserialization
- Comprehensive unit tests (29 test cases)

Traces to: SRS-FHIR-003, FR-2.2.2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,6 +277,7 @@ if(BRIDGE_BUILD_FHIR)
         src/fhir/resource_handler.cpp
         src/fhir/fhir_server.cpp
         src/fhir/patient_resource.cpp
+        src/fhir/service_request_resource.cpp
         src/mapping/fhir_dicom_mapper.cpp
     )
     list(APPEND PACS_BRIDGE_HEADERS
@@ -286,6 +287,7 @@ if(BRIDGE_BUILD_FHIR)
         include/pacs/bridge/fhir/resource_handler.h
         include/pacs/bridge/fhir/fhir_server.h
         include/pacs/bridge/fhir/patient_resource.h
+        include/pacs/bridge/fhir/service_request_resource.h
         include/pacs/bridge/mapping/fhir_dicom_mapper.h
     )
 endif()
