--- a/src/fhir/CMakeLists.txt
+++ b/src/fhir/CMakeLists.txt
@@ -11,6 +11,7 @@ set(FHIR_SOURCES
     resource_handler.cpp
     fhir_server.cpp
     patient_resource.cpp
+    service_request_resource.cpp
 )
 
 set(FHIR_HEADERS
@@ -20,6 +21,7 @@ set(FHIR_HEADERS
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/resource_handler.h
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/fhir_server.h
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/patient_resource.h
+    ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/service_request_resource.h
 )
 
 # Export sources to parent scope for main library
