--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -372,6 +372,9 @@ if(BRIDGE_BUILD_FHIR)
     # Patient Resource Tests (Phase 3 - Issue #32)
     add_bridge_test(patient_resource_test "unit;fhir;patient;phase3")
 
+    # ServiceRequest Resource Tests (Phase 3 - Issue #33)
+    add_bridge_test(service_request_resource_test "unit;fhir;servicerequest;phase3")
+
     # FHIR-DICOM Mapper Tests (Phase 3 - Issue #35)
     add_gtest_test(fhir_dicom_mapper_test "unit;fhir;mapping;phase3")
 endif()
@@ -425,6 +428,7 @@ if(BRIDGE_BUILD_FHIR)
     message(STATUS "Phase 3 FHIR Tests:")
     message(STATUS "  - fhir_server_test")
     message(STATUS "  - patient_resource_test")
+    message(STATUS "  - service_request_resource_test")
     message(STATUS "  - fhir_dicom_mapper_test")
 endif()
 message(STATUS "==========================")
