--- a/src/fhir/CMakeLists.txt
+++ b/src/fhir/CMakeLists.txt
@@ -12,6 +12,7 @@ set(FHIR_SOURCES
     fhir_server.cpp
     patient_resource.cpp
     service_request_resource.cpp
+    imaging_study_resource.cpp
 )
 
 set(FHIR_HEADERS
@@ -22,6 +23,7 @@ set(FHIR_HEADERS
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/fhir_server.h
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/patient_resource.h
     ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/service_request_resource.h
+    ${CMAKE_SOURCE_DIR}/include/pacs/bridge/fhir/imaging_study_resource.h
 )
 
 # Export sources to parent scope for main library
