--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -375,6 +375,9 @@ if(BRIDGE_BUILD_FHIR)
     # ServiceRequest Resource Tests (Phase 3 - Issue #33)
     add_bridge_test(service_request_resource_test "unit;fhir;servicerequest;phase3")
 
+    # ImagingStudy Resource Tests (Phase 3 - Issue #34)
+    add_bridge_test(imaging_study_resource_test "unit;fhir;imagingstudy;phase3")
+
     # FHIR-DICOM Mapper Tests (Phase 3 - Issue #35)
     add_gtest_test(fhir_dicom_mapper_test "unit;fhir;mapping;phase3")
 endif()
@@ -429,6 +432,7 @@ if(BRIDGE_BUILD_FHIR)
     message(STATUS "  - fhir_server_test")
     message(STATUS "  - patient_resource_test")
     message(STATUS "  - service_request_resource_test")
+    message(STATUS "  - imaging_study_resource_test")
     message(STATUS "  - fhir_dicom_mapper_test")
 endif()
 message(STATUS "==========================")
