build(cmake): add monitoring_system dependency
Add monitoring_system from kcenon ecosystem as optional dependency:
- Add monitoring_system to FetchContent in FindPacsSystem.cmake
- Add BRIDGE_BUILD_MONITORING option (default ON)
- Add PACS_BRIDGE_HAS_MONITORING_SYSTEM compile definition
- Update build summary to show monitoring status

Refs: #40, #86

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -429,6 +429,7 @@ message(STATUS "")
 message(STATUS "Features:")
 message(STATUS "  TLS Support:      ${PACS_BRIDGE_HAS_OPENSSL}")
 message(STATUS "  PACS System:      ${PACS_BRIDGE_HAS_PACS_SYSTEM}")
+message(STATUS "  Monitoring:       ${PACS_BRIDGE_HAS_MONITORING_SYSTEM}")
 message(STATUS "")
 message(STATUS "Install Prefix:     ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "========================================")
